# dualshock4-rs

./: .gitignore  Cargo.toml  README.md  bitbucket-pipelines.yml
examples/: data-output-old.rs  data-output.rs  exam0.rs
src/: lib.rs  main.rs
src/dualshock4/: analog_sticks.rs  battery_level.rs  buttons.rs  headset.rs  mod.rs  model.rs  motion.rs  touchpad.rs
