[package]
name = "dualshock4"
version = "0.1.0"
authors = ["Niko Viik <Niko.Viik@Wunderdog.fi>"]
description = "Read Dualshock4 controller data by using hidapi"
keywords = ["dualshock", "dualshock4", "ds4", "playstation"]
categories = ["hardware-support"]
license = "MIT"
documentation = "https://bitbucket.org/unessa/dualshock4-rust"
homepage = "https://bitbucket.org/unessa/dualshock4-rust"
repository = "https://bitbucket.org/unessa/dualshock4-rust.git"
readme="README.md"

[dependencies]
hidapi = "0.4.1"
scroll = "0.9.0"
clippy = { version = "0.0.187", optional = true }

[dev-dependencies]
rand = "0.4"
